# rbx2

./: README.md  rbx2-prereq.sh
rbx2/: CMakeLists.txt  package.xml
rbx2_ar_tags/: CMakeLists.txt  ar_tags.rviz  mainpage.dox  package.xml
rbx2_ar_tags/launch/: ar_follower.launch  ar_indiv_kinect.launch  ar_indiv_no_kinect.launch  ar_tags_cog.launch
rbx2_ar_tags/nodes/: ar_follower.py  ar_tags_cog.py
rbx2_arm_nav/: CMakeLists.txt  mainpage.dox  package.xml  setup.py
rbx2_arm_nav/config/: arm_nav.rviz  arm_paths.rviz  arm_sim.rviz  attached_object.rviz  demo.rviz  demo_paths.rviz  pcl.rviz  pick_and_place.rviz  real_pick_and_place.rviz
rbx2_arm_nav/launch/: demo_rviz.launch  fake_box_robot_moveit.launch  fake_pedestal_pi_no_gripper_moveit.launch  fake_pedestal_pi_with_gripper_moveit.launch  fake_pi_robot_moveit.launch  object_detection_demo.launch  pedestal_pi_moveit_rviz.launch  pi_robot_moveit_demo.launch  saber_head_tracker.launch  simple_perception.launch
rbx2_arm_nav/meshes/: lightsaber.dae  lightsaber.stl
rbx2_arm_nav/nodes/: arm_tracker.py
rbx2_arm_nav/scenes/: simple_scene.scene
rbx2_arm_nav/scripts/: fetch_tuck_arm.py  get_arm_pose.py  grasping_moveit_ik_demo.py  gripper_trajectory_demo.py  moveit_attached_object_demo.py  moveit_cartesian_demo.py  moveit_constraints_demo.py  moveit_fk_demo.py  moveit_ik_demo.py  moveit_obstacles_demo.py  moveit_pick_and_place_demo.py  moveit_speed_demo.py  pedestal_moveit_pick_and_place_demo.py  pedestal_pi_moveit_ik_demo.py  real_pick_and_place.py  trajectory_demo.py
rbx2_bringup/: CMakeLists.txt  kill_dynamixels.sh  mainpage.dox  package.xml  pedestal_pi.sh  sim.rviz
rbx2_bringup/config/: box_robot_base_only.yaml  diagnostics.yaml
rbx2_bringup/launch/: fake_box_robot_base_only.launch  fake_box_robot_with_gripper.launch  grasping_pi_robot_no_base.launch  hokuyo.launch  laptop_battery.launch  pedestal_pi_head_only.launch  pedestal_pi_no_gripper.launch  pedestal_pi_with_gripper.launch  pi_robot_base_only.launch  pi_robot_head_only.launch  pi_robot_with_gripper.launch  pi_robot_with_gripper_no_base.launch
rbx2_bringup/nodes/: laptop_battery.py
rbx2_description/: CMakeLists.txt  mainpage.dox  package.xml  urdf.rviz
rbx2_description/launch/: box_robot_base_only.launch  box_robot_base_with_laser.launch  box_robot_tele_torso_with_arm.launch  box_robot_with_arm.launch  box_robot_with_kinect.launch  box_robot_with_pan_tilt_head.launch  box_robot_with_pan_tilt_head_xtion.launch  box_robot_with_torso.launch  box_robot_with_two_arms.launch  box_robot_with_xtion.launch  pedestal_pi_head_only.launch  pedestal_pi_no_gripper.launch  pedestal_pi_with_gripper.launch  pi_robot_base_only.launch  pi_robot_base_with_laser.launch  pi_robot_tele_torso_with_arm.launch  pi_robot_with_arm.launch  pi_robot_with_kinect.launch  pi_robot_with_pan_tilt_head.launch  pi_robot_with_pan_tilt_head_xtion.launch  pi_robot_with_phantomx_gripper.launch  pi_robot_with_tele_torso.launch  pi_robot_with_torso.launch  pi_robot_with_two_arms.launch  pi_robot_with_xtion.launch
rbx2_description/meshes/: disc.dae  gripper_hand_fixed_link.stl  guide_rail_fixed_link.stl  kinect.dae  kinect.stl  xtion.dae  xtion.stl
rbx2_diagnostics/: CMakeLists.txt  package.xml
rbx2_diagnostics/config/: dynamixels.yaml  power.yaml
rbx2_diagnostics/launch/: monitor_dynamixels.launch  monitor_laptop_charge.launch
rbx2_diagnostics/nodes/: monitor_dynamixels.py  monitor_laptop_charge.py
rbx2_dynamixels/: CMakeLists.txt  mainpage.dox  package.xml  setup.py
rbx2_dynamixels/config/: dynamixel_diagnostics.yaml  dynamixels.rviz  head_only_diagnostics.yaml
rbx2_dynamixels/launch/: arbotix_dynamixel_demo.launch  arbotix_head_position_tracker.launch  arbotix_head_tracker.launch  head_position_tracker.launch  head_tracker.launch
rbx2_dynamixels/nodes/: head_tracker.py
rbx2_dynamixels/scripts/: arbotix_disable_all_servos.py  arbotix_enable_all_servos.py  arbotix_low_speed_all_servos.py  arbotix_relax_all_servos.py  head_trajectory_demo.py
rbx2_gui/: CMakeLists.txt  dhttpd.sh  mainpage.dox  mjpeg_server.html  nav.rviz  package.xml  pi_remote2.html  robot_gui.html  simple_gui.html  test_grid.html  test_map.html
rbx2_gui/js/: easeljs.min.js  jquery.longclick-min.js  mjpegcanvas.min.js  nav2d.js  node_launcher_snippet.js  pi_remote2.js  robot_gui.js  simple_gui.js
rbx2_gui/launch/: mjpeg_server.launch  node_launcher_plus_rosbridge.launch  rosbridge.launch  web_video_server.launch
rbx2_gui/scripts/: install-js-packages.sh  mini-httpd.conf  mini-httpd.sh
rbx2_gui/styles/: pi_remote.css  robot_gui.css
rbx2_gui/tabs/: diagnostics.html  main.html  misc.html  navigation.html  nodes.html  parameters.html
rbx2_msgs/: CMakeLists.txt  mainpage.dox  package.xml
rbx2_nav/: CMakeLists.txt  mainpage.dox  package.xml
rbx2_nav/config/: nav.rviz  nav_test_params.yaml  yocs_cmd_vel.yaml  yocs_cmd_vel_with_keyboard.yaml
rbx2_nav/launch/: mux_fake_move_base.launch  mux_fake_move_base_blank_map.launch  mux_joystick_teleop.launch  mux_keyboard_teleop.launch  yocs_cmd_vel.launch  yocs_cmd_vel_with_keyboard.launch
rbx2_nav/maps/: test_map.pgm  test_map.yaml
rbx2_nav/nodes/: select_cmd_vel.py
rbx2_tasks/: CMakeLists.txt  nav_tasks.rviz  package.xml  setup.py
rbx2_tasks/launch/: fake_turtlebot.launch
rbx2_tasks/nodes/: add_remove_tree.py  clean_house_smach.py  clean_house_tree.py  monitor_fake_battery.py  parallel_tree.py  patrol_script.py  patrol_smach.py  patrol_smach_callback.py  patrol_smach_concurrence.py  patrol_smach_iterator.py  patrol_tree.py  random_patrol_smach.py
rbx2_utils/: CMakeLists.txt  fake_target.rviz  mainpage.dox  package.xml
rbx2_utils/cfg/: BatterySimulator.cfg  Pub3DTarget.cfg
rbx2_utils/docs/: BatterySimulatorConfig-usage.dox  BatterySimulatorConfig.dox  BatterySimulatorConfig.wikidoc
rbx2_utils/launch/: battery_simulator.launch  laptop_battery.launch  pub_3d_target.launch  pub_tf_frame.launch
rbx2_utils/nodes/: battery_simulator.py  dyna_client.py  pub_3d_target.py  pub_tf_frame.py
rbx2_vision/: CMakeLists.txt  mainpage.dox  package.xml
(+343 files in other folders)
