<package>
  <name>rbx2_msgs</name>
  <version>0.1.0</version>

  <description>ROS By Example Vol 2 - Messages</description>

  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rbx2_msgs</url>
  <url type="bugtracker">https://github.com/pirobot/rbx2/issues</url>
  <author email="patrick@pirobot.org">Patrick Goebel</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>

</package>